# rag-assistant

./: .env.example  .gitignore  COMMANDS.md  DESIGN.md  Dockerfile  README.md  compose.yml  gradio_launcher.py  pyproject.toml
airflow/: Dockerfile  entrypoint.sh
airflow/dags/: ingestion_dag.py
airflow/dags/ingestion/: __init__.py  tasks.py
src/: config.py  exceptions.py  gradio_app.py  main.py  telegram_bot.py
src/models/: document.py
src/routers/: agentic_ask.py  ask.py  documents.py  hybrid_search.py  search.py
src/schemas/: ollama.py  search.py
src/schemas/api/: ask.py  health.py  search.py
src/schemas/embeddings/: jina.py
src/schemas/indexing/: chunks.py
src/services/: database.py
src/services/agents/: agentic_rag.py  config.py  context.py  models.py  prompts.py  state.py  tools.py
src/services/agents/nodes/: generate_answer_node.py  grade_documents_node.py  guardrail_node.py  out_of_scope_node.py  retrieve_node.py  rewrite_query_node.py  utils.py
src/services/cache/: client.py
src/services/embeddings/: jina_client.py
src/services/indexing/: hybrid_indexer.py  text_chunker.py
src/services/ingestion/: downloader.py  fetcher.py  orchestrator.py  parser.py
src/services/langfuse/: client.py  tracer.py
src/services/ollama/: client.py  prompts.py
src/services/openai/: client.py
src/services/opensearch/: client.py  index_config.py  index_config_hybrid.py  indexing_service.py  query_builder.py
src/services/search_loaders/: chunk_loader.py  paper_loader.py  text_chunker.py
