[project]
name = "rag-assistant"
version = "0.1.0"
description = "Production RAG Assistant — extensible document intelligence system"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "opensearch-py>=3.0.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.4",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]